--- a/raster-functions.Rmd
+++ b/raster-functions.Rmd
@@ -79,7 +79,12 @@ legend(leg.x, leg.y,
        bty = "n") # turn off legend border
 
 
+# general log file of processing
 
+sink(paste0(format(Sys.time(), "%Y-%m-%d_%H%M%S"), 
+            "_sessionInfo.txt"))
+sessionInfo()
+sink()
 
 ```
 
