--- a/raster-functions.Rmd
+++ b/raster-functions.Rmd
@@ -6,6 +6,7 @@ output: html_document
 ---
 
 ```{r import}
+# load libraries
 
 library(raster)
 library(rgdal)
@@ -85,6 +86,36 @@ sink(paste0(format(Sys.time(), "%Y-%m-%d_%H%M%S"),
             "_sessionInfo.txt"))
 sessionInfo()
 sink()
+
+```
+
+
+```{r hist-info }
+
+# create histogram object
+# histinfo <- hist(chm, breaks=c(0, 6, 30, 50, 100))
+
+# create histogram breaks object
+the.breaks <- c(0, 6, 30, 50, 100)
+
+# function that creates a breaks matrix
+class.num <- length(the.breaks)-1
+m = matrix(0, # initialize the matrix with 0's
+           class.num, # total classes to create
+           3) # create a 3 column matrix
+# init vector
+test <- 1:class.num
+
+# here are some changes
+
+# of breaks in our matrix
+for(i in (1:class.num)){
+  m[i,] <- c(the.breaks[i], the.breaks[i+1], i)
+  test[i] <- paste0(the.breaks[i],"-",the.breaks[i+1])
+}
+
+# create list of labels
+class.num
 
 ```
 
